<resources>
    <string name="app_name">NDC 4.0</string>
    <string name="title_activity_login">LoginActivity</string>

    <!--LoginActivity-->
    <string name="activity_login_txt_sign_in">Log in to your account</string>
    <string name="activity_login_txt_sign_in_txt_hint_username">Username</string>
    <string name="activity_login_btn_sign_in">Log In</string>
    <string name="activity_login_txt_forgot_password">Forgot Password?</string>
    <string name="hint_password">Password</string>
    <string name="java_loginactivity_enter_user_name">Please enter Username!!</string>
    <string name="java_loginactivity_enter_password">Please enter Password!!</string>
    <string name="rationale_camera">This app needs access to your phone state.</string>
    <string name="returned_from_app_settings_to_activity">
        Returned from app settings to MainActivity with the following permissions:
        \n\nPhone State: %s

    </string>
    <string name="rationale_storage">This app needs access to your phone storage.</string>
    <string name="returned_from_app_settings_to_activity_storage">
        Returned from app settings to MainActivity with the following permissions:
            \nStorage &amp; Camera: %s
    </string>
    <string name="storage_and_camera">Storage and Camera</string>

    <string name="rationale_storage_camera">This app needs access to your storage and camera.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Forgot Password-->
    <string name="forget_password_username_label">Username</string>
    <string name="forget_password_email_label">Email</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--NoticeFragment--> <!--NoticeFragmentNew-->
    <string name="fragment_notice_txt_header">Notice</string>
    <string name="fragment_notice_txt_attachment">This notice has attachment.</string>
    <string name="btn_done">Done</string>

    <!-- Notice -->

    <string name="tab_notice_general">All</string>
    <string name="tab_notice_circular">Academic</string>
    <string name="tab_notice_announcement">Extra-Academic</string>
    <string name="btn_notice_acknowledge">Acknowledge</string>


    <!--ArchievePageFragment-->
    <string name="fragment_archieved_events_txt_no_data_found">No data found!</string>

    <!--UIHelper-->
    <string name="java_uihelper_error">Error</string>
    <string name="java_uihelper_ok">OK</string>
    <string name="java_uihelper_settings">Settings</string>
    <string name="pigeon_hole_text">Pigeon Hole</string>
    <string name="notice_text">Notice</string>
    <string name="events_text">Events</string>
    <string name="research_text">Research</string>
    <string name="class_schedule_text">Class Schedule</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="assign_date">Assign Date  </string>
    <string name="publish_date">Publish Date  </string>
    <string name="assign_to">Assign to</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="due_date">Due Date  </string>
    <string name="description">Description :</string>
    <string name="description_et">Description </string>
    <string name="title">Title :</string>
    <string name="title_et">Title </string>
    <string name="attachment"> Attachment </string>
    <string name="attach"> Attach</string>
    <string name="assign"> Assign</string>
    <string name="edit"> Edit</string>
    <string name="delete"> Delete</string>

    <string name="test_description">The holy Eid-e-Miladunnabi (SM),
        marking the anniversary of birth and demise of Prophet Muhammad (SM),
        is being observed in the country today with due religious solemnity.
        On this day in 570, the 12th of Rabiul Awal of the Hijri calendar,
        Muhammad (SM) was born in Makkah of Saudi Arabia with divine blessings
        and messages of peace for mankind.</string>


    <!--CustomDateTimePicker-->
    <string name="java_customdatetimepicker_set_date">Set Date</string>
    <string name="java_customdatetimepicker_set_time">Set Time</string>
    <string name="java_customdatetimepicker_set">Set</string>
    <string name="java_customdatetimepicker_cancel">Cancel</string>
    <string name="browse">Browse</string>
    <string name="btn_cancel">Cancel</string>

    <string name="video"> Video</string>
    <string name="audio"> Audio</string>
    <string name="image">Image</string>
    <string name="doc"> Doc</string>
    <string name="file"> File</string>
    <string name="url"> URL</string>
    <string name="video_type">(mp4)</string>
    <string name="doc_type">(doc,pdf,ppt etc)</string>
    <string name="file_type"> (zip, rar etc)</string>
    <string name="profile_text">Profile</string>
    <string name="reading_package_text">Reading Package</string>
    <string name="common">Common</string>
    <string name="custom">Custom</string>
    <string name="all_ndc">All NDC</string>
    <string name="all_capston">All Capston</string>
    <string name="all_afwc">All AFWC</string>
    <string name="name_text">name</string>


    <string name="file_chooser_message">Choose file from sources below</string>
    <string name="file_chooser_type_photo">Photo and Video</string>
    <string name="file_chooser_type_doc">Documents</string>

    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="tap_to_reload">try</string>
    <string name="submit">Submit</string>
    <string name="course_calendar_text">Course Calendar</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="filter">Filter</string>
</resources>
