<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <item
            app:itemTextColor="#676767"
            android:id="@+id/nav_home"
            android:icon="@drawable/home_nav"
            android:title="Home" />
        <item
            app:itemTextColor="#676767"
            android:id="@+id/nav_pigeonhole"
            android:icon="@drawable/pigeohole_nav"
            android:title="Pigeonhole" />
        <item
            app:itemTextColor="#676767"
            android:id="@+id/nav_notice"
            android:icon="@drawable/notice_nav"
            android:title="Notice" />
        <item
            app:itemTextColor="#676767"
            android:id="@+id/nav_manage"
            android:icon="@drawable/class_schedule_nav"
            android:title="@string/class_schedule_text" />
        <item
            app:itemTextColor="#676767"
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/events_text" />
        <item
            app:itemTextColor="#676767"
            android:id="@+id/nav_research"
            android:icon="@drawable/research_nav"
            android:title="@string/research_text" />
        <item
            app:itemTextColor="#676767"
            android:id="@+id/nav_reading_package"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/reading_package_text" />
        <item
            app:itemTextColor="#676767"
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_nav"
            android:title="@string/profile_text" />
        <item
            app:itemTextColor="#676767"
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="Log out" />
    </group>
    <group
        android:id="@+id/second"
        android:checkableBehavior="single">
        <item xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/navi_item_create_notifications_sound"
            android:title="Powered by"
            app:actionLayout="@layout/powered_by"
            app:showAsAction="always" />

    </group>
    <!--https://stackoverflow.com/questions/21796209/how-to-create-a-custom-navigation-drawer-in-android-->
    <!--<item android:title="Powered By:">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:src="@drawable/ndc_logo"-->
                <!--android:title="" />-->
        <!--</menu>-->
    <!--</item>-->


</menu>
