<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_shape_background_task_assign"
    android:orientation="vertical"
    android:padding="@dimen/size_10dp">

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->


    <!--</LinearLayout>-->

    <!--<ScrollView-->
    <!--android:id="@+id/scrollView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<ListView-->
    <!--android:id="@+id/listView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="300dp"-->
    <!--android:layout_marginTop="5dp"-->
    <!--android:background="@color/white"-->
    <!--android:cacheColorHint="@android:color/transparent"-->
    <!--android:divider="@color/gray_bg"-->
    <!--android:dividerHeight="5dp" />-->
    <!--</ScrollView>-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->

    <!--<LinearLayout-->
    <!--android:orientation="horizontal"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:textSize="@dimen/text_size_14_sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/video" />

        <RadioButton
            android:textSize="@dimen/text_size_14_sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/doc" />

        <RadioButton
            android:textSize="@dimen/text_size_14_sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/file" />

        <!--<RadioButton-->
            <!--android:textSize="@dimen/text_size_14_sp"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight=".8"-->
            <!--android:text="@string/url" />-->

    </RadioGroup>

    <LinearLayout
        android:paddingTop="-5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/video_type"
            android:textSize="@dimen/text_size_12_sp" />

        <TextView
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/doc_type"
            android:textSize="@dimen/text_size_12_sp" />

        <TextView
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/file_type"
            android:textSize="@dimen/text_size_12_sp" />

        <!--<TextView-->
            <!--android:layout_width="@dimen/margin_0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight=".8"-->
            <!--android:gravity="center"-->
            <!--android:text=""-->
            <!--android:textSize="@dimen/text_size_12_sp" />-->

    </LinearLayout>

    <!--</LinearLayout>-->

    <Button
        android:id="@+id/btnBrowse"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_marginBottom="@dimen/size_10dp"
        android:background="@drawable/round_shape_background_browse"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/browse"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15_sp" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_marginBottom="@dimen/size_10dp"
        android:background="@drawable/round_shape_background_done"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/attach"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15_sp" />


</LinearLayout>
