<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_10dp"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/list_background"
    tools:context="com.classtune.ndc.fragment.InsTructorTaskAssignFragment">

    <android.support.v7.widget.CardView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_0dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_0dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_et"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_0dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">
            <EditText
                android:gravity="top"
                android:lines="5"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_et"/>
        </android.support.v7.widget.CardView>
            <LinearLayout
                android:padding="@dimen/size_10dp"
                android:id="@+id/layoutAssDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center" >

                <TextView
                    android:id="@+id/assign_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assign_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16_sp" />
            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/size_10dp"
                android:layout_marginTop="@dimen/size_5dp"
                android:id="@+id/layoutDueDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center" >

                <TextView
                    android:id="@+id/due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/due_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16_sp" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
